2013-05-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac (AC_INIT): Bump version to 6.0rc1.

2013-05-07  Hannes Weisbach <hannes_weisbach@gmx.net>

	* avrftdi_private.h: Change size of pin_checklist to N_PINS (from N_PINS-1)
	* avrftdi.c: Adapt code to new size of pin_checklist. Remove pins_check()
	from set_pin().
	Add pgm->power[up|down] functions as well as fill pgm->enable|disable with
	proper content as suggested by Rene Liebscher.

2013-05-05  Rene Liebscher <R.Liebscher@gmx.de>

	* pindefs.h: use unsigned int if stdint.h is not available and UINT_MAX is 0xffffffff
	otherwise use unsinged long
	* ft245r.c: added support for more pin functions led, vcc, buff

2013-05-06  Hannes Weisbach <hannes_weisbach@gmx.net>

	* avrftdi_tpi.c: instead of private set_pin() function pointer use the one
	declared in struct PROGRAMMER.
	* avrftdi_private.h: remove set_pin function pointer. Add pin_checklist_t
	member to check pgm->setpin calls during runtime.
	* avrftdi.c: remove set_pin function pointer init, add pgm->setpin init.
	Convert avrftdi to new 0-based pindefs infrastructure.
	* avrdude.conf.in: Change all avrftdi-based programmers' pin definitions to
	0-based.

2013-05-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* pindefs.h: Include "ac_cfg.h" before testing for HAVE_* macros.

2013-05-05  Rene Liebscher <R.Liebscher@gmx.de>

	* main.c: revert to rev 1159 (doing pgm_display after pgm_open)
	* avrpart.[ch]: moved avr_pin_name to pindefs.[ch]
	* pgm.c: moved pins_to_str to pindefs.[ch], added initialization of 
          new pin definitions in pgm_new()
	* pindefs.[ch]: added moved functions from other files, added a lot of 
          documentation, reformatted files using astyle to have consistent spacing,
          added a new generic check function for pins
	* ft245r.c: used new generic pin check function

2013-05-03  Rene Liebscher <R.Liebscher@gmx.de>

	Create new pin definition data structures to support 0-based pin numbers,